# AILab_Project2_submission

./: .gitignore  CLAUDE.md  README.md  export_onnx.py  export_onnx_truncated.py  generate.py  generate_512_upsample.py  generate_from_onnx.py  main.ipynb  pyproject.toml  requirements.txt  test.ipynb  train.py  train_512.ipynb
ckpt/: ffhq256_baseline.pt  model.pt
configs/: baseline_256.yaml  progressive_1024.yaml  progressive_1024_a100.yaml  progressive_1024_l4.yaml
src/: losses.py  model.py
