[project]
name = "2019312493-project02"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "numpy>=1.24",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "wandb>=0.16",
    "onnx>=1.15",
    "onnxruntime>=1.16",
    "pytorch-fid>=0.3.0",
    "scipy>=1.10",
]
